--- a/README
+++ b/README
@@ -1,1 +1,21 @@
-This file was created by JetBrains PhpStorm (PhpStorm) PS-100.36 for binding GitHub repository
+Shared Memory Cacher
+
+Key-value storage in shared memory.
+Works faster than big key-value storages, as Memcache or Redis, but can use memory of 1 server only.
+
+Features:
+* Multiaccess - multiple readers, one writer
+* Tags for keys
+* Dog-pile and race-condition effects excluded
+
+Class MultiAccess can be used separately too.
+
+PHP version: 5.3 (replace __DIR__ to dirname(__FILE__) for 5.2)
+PHP should support shm-functions and msg-functions (--enable-shmop --enable-sysvsem --enable-sysvshm --enable-sysvmsg)
+
+Tested in working project since June 2010.
+
+Look at cooments for info. Ask, what you want to see commented.
+
+License: MIT
+
