--- a/README
+++ b/README
@@ -1,18 +1,29 @@
 Shared Memory Cacher
 
 Key-value storage in shared memory.
-This branch extended by using APC as main cacher.
-It's faster and full compatible with previous variant.
+As a storage can be used the shared memory or the APC extension.
 
 Features:
 * Tags for keys
 * Dog-pile and race-condition effects excluded
+* MultiAccess class can be used for any resource
 
 PHP version: 5.3
-APC should be installed.
-http://pecl.php.net/package/APC
+For APCObject:
+	APC (http://pecl.php.net/package/APC) should be installed, and some settings should be added in php.ini (or apc.ini if you use it)
+	Required: apc.slam_defense = Off
+	Optional:
+	apc.ttl = 7200
+	apc.user_ttl = 3600
+	apc.shm_size = 64M
+
+For MemoryAsObject, MultiAccess:
+	PHP should support shm-functions and msg-functions (--enable-shmop --enable-sysvsem --enable-sysvshm --enable-sysvmsg)
+
+APC is faster, but can have some fragmentation issues - check, if it works normal for you. This issues can be solved only by the APC developers.
 
 Look at comments for info. Ask, what you want to see commented.
 
 License: MIT
 
+TODO: write full documentation
